Remove some needless boxing.